fix gap in hero

--- a/public/styles/sections/hero-gear.css
+++ b/public/styles/sections/hero-gear.css
@@ -1,4 +1,5 @@
 .hero-gear{
+    height: 488px;
     padding-top: 30px;
     display: flex;
     gap: 50px;
@@ -18,7 +19,7 @@
 .hero-gear .content-right {
     display: grid;
     grid-template-columns: repeat(2, 320px); 
-    grid-template-rows: repeat(5, 76px); 
+    grid-template-rows: repeat(5, 82px); 
     gap: 20px;
 }
 
