--- a/public/styles/sections/slider-1.css
+++ b/public/styles/sections/slider-1.css
@@ -1,4 +1,5 @@
 .slider-1 {
+    max-height: 500px;
     max-width: 1229px;
     overflow: hidden;
     margin: 30px 0px;
@@ -11,6 +12,6 @@
 }
 .slide img {
     width: 100%;
-    height: 500px;
+    height: 100%;
     object-fit: cover;
 }
